# kai-sdk

./: .gitignore  Makefile  README.md  go.work  go.work.sum  package.json
.ci/tools/: bump_version.sh
.github/workflows/: python-publish-package.yaml  test-release.yaml  test.yaml  utils-pr-size-labeler.yaml
demo/: Makefile  TESTING-MEASUREMENTS-OPENTELEMETRY-LOCAL.md  TESTING-MINIO-LOCAL.md  TESTING-NATS-LOCAL.md  TESTING-REDIS-LOCAL.md  docker-compose.yml  krt.yaml  local.env
demo/cronjob-trigger/: app.yaml  go.mod  go.sum  main.go  minikube_build.sh
demo/cronjob-trigger-py/: Dockerfile  app.yaml  config.yaml  main.py  minikube_build.sh  pyproject.toml
demo/exit/: app.yaml  config.yaml  develop.Dockerfile  go.mod  go.sum  main.go  minikube_build.sh
demo/exit-py/: app.yaml  config.yaml  main.py  minikube_build.sh  pyproject.toml
demo/grpc-trigger/: Dockerfile  app.yaml  go.mod  main.go  minikube_build.sh
demo/makefiles/: development.mk  help.mk
demo/metrics/: Dockerfile  app.yaml  go.mod  go.sum  main.go  minikube_build.sh  otel-collector-config.yaml  otelCollectorDockerfile
demo/metrics-py/: Dockerfile  app.yaml  config.yaml  develop.Dockerfile  main.py  metricsDockerfile  minikube_build.sh  pyproject.toml
demo/nats-trigger/: app.yaml  config.yaml  go.mod  go.sum  main.go
demo/nats-trigger-py/: Dockerfile  app.yaml  develop.Dockerfile  main.py  minikube_build.sh  pyproject.toml
demo/redis-py/: app.yaml  main.py  minikube_build.sh  pyproject.toml
demo/rest-trigger/: app.yaml  config.yaml  go.mod  go.sum  main.go  minikube_build.sh
demo/rest-trigger-py/: app.yaml  main.py  minikube_build.sh  pyproject.toml
demo/sdk-test/cronjob-trigger-py/: main.py  pyproject.toml
demo/sdk-test/exit/: go.mod  go.sum
demo/sdk-test/exit-py/: pyproject.toml
demo/sdk-test/nats-trigger/: go.mod
demo/sdk-test/nats-trigger-py/: main.py
demo/sdk-test/rest-trigger-py/: main.py  pyproject.toml
demo/sdk-test/task-py/: pyproject.toml
demo/task/: app.yaml  config.yaml  go.mod  go.sum  main.go  minikube_build.sh
demo/task-py/: Dockerfile  app.yaml  config.yaml  main.py  minikube_build.sh  pyproject.toml
demo/training-workflow/: demo.yaml  krt.yaml  training.proto
demo/training-workflow/src/training-py/: Dockerfile  app.yaml  main.py  minikube_build.sh  pyproject.toml
demo/training-workflow/src/training-py/proto/: training_pb2.py  training_pb2.pyi
go-sdk/: .goimportsignore  .golangci.yml  .mockery.yaml  Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go  package.json  sonar-project.properties
go-sdk/demo/exit/: go.mod
go-sdk/mocks/: centralized_config_mock.go  ephemeral_storage_mock.go  jetstream_context_mock.go  key_value_entry_mock.go  key_value_mock.go  measurements_mock.go  message_utils_mock.go  messaging_mock.go  messaging_utils_mock.go  metadata_mock.go  minio_client_mock.go  model_registry_mock.go  nats_object_store_mock.go  object_store_mock.go  path_utils_mock.go  persistent_storage_mock.go  predictions_mock.go  storage_mock.go
go-sdk/protos/: kai_nats_msg.pb.go
go-sdk/runner/: errors.go  export_test.go  runner.go  runner_test.go
go-sdk/sdk/: kai_sdk.go
krt-files-downloader/: CHANGELOG.md  go.sum
proto/: kai_nats_msg.proto
py-sdk/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  package.json  pyproject.toml  sonar-project.properties  stderr
py-sdk/runner/: pyproject.toml  stderr
py-sdk/runner/exit/: exit_runner.py  subscriber.py
py-sdk/runner/runner/: runner.py  runner_test.py
py-sdk/runner/runner/common/: common.py  common_test.py
py-sdk/runner/runner/exit/: exit_runner.py  exit_runner_test.py  helpers.py  helpers_test.py  subscriber.py  subscriber_test.py
py-sdk/runner/runner/task/: exceptions.py  helpers.py  helpers_test.py  subscriber.py  subscriber_test.py  task_runner.py  task_runner_test.py
py-sdk/runner/runner/trigger/: exceptions.py  helpers.py  helpers_test.py  subscriber.py  subscriber_test.py  trigger_runner.py  trigger_runner_test.py  utils.py
py-sdk/runner/task/: subscriber.py  task_runner.py
py-sdk/runner/trigger/: subscriber.py  trigger_runner.py
py-sdk/sdk/: pyproject.toml
py-sdk/sdk/sdk/: kai_nats_msg_pb2.py  kai_nats_msg_pb2.pyi  kai_sdk.py  kai_sdk_test.py
py-sdk/sdk/sdk/auth/: authentication.py
py-sdk/sdk/sdk/centralized_config/: centralized_config.py  centralized_config_test.py  exceptions.py
py-sdk/sdk/sdk/ephemeral_storage/: ephemeral_storage.py  ephemeral_storage_test.py  exceptions.py
py-sdk/sdk/sdk/ephemeral_store/: ephemeral_storage.py
py-sdk/sdk/sdk/measurements/: measurements.py  measurements_test.py
py-sdk/sdk/sdk/messaging/: exceptions.py  messaging.py  messaging_test.py  messaging_utils.py  messaging_utils_test.py
py-sdk/sdk/sdk/metadata/: metadata.py  metadata_test.py
py-sdk/sdk/sdk/model_registry/: exceptions.py  model_registry.py  model_registry_test.py
py-sdk/sdk/sdk/object_store/: exceptions.py  object_store.py  object_store_test.py
py-sdk/sdk/sdk/path_utils/: path_utils.py  paths_utils_test.py
py-sdk/sdk/sdk/persistent_storage/: exceptions.py  persistent_storage.py  persistent_storage_test.py
py-sdk/sdk/sdk/predictions/: exceptions.py  store.py  store_test.py  types.py
py-sdk/src/: kai_nats_msg_pb2.py
py-sdk/src/runner/: exceptions.py  runner.py  stdout
py-sdk/src/runner/task/: task_runner.py
py-sdk/src/runner/trigger/: trigger_runner.py
py-sdk/src/sdk/: kai_nats_msg.py  kai_nats_msg_pb2.py  kai_sdk.py  kai_sdk_test.py
py-sdk/src/sdk/centralized_config/: centralized_config.py  centralized_config_test.py  constants.py  exceptions.py
py-sdk/src/sdk/centralized_configuration/: centralized_configuration.py
py-sdk/src/sdk/messaging/: exceptions.py  messaging.py  messaging_test.py  messaging_utils.py  messaging_utils_test.py
py-sdk/src/sdk/metadata/: metadata.py  metadata_test.py
py-sdk/src/sdk/object_store/: exceptions.py  object_store.py  object_store_test.py
py-sdk/src/sdk/path_utils/: path_utils.py  paths_utils_test.py
scripts/: update_go_mod.sh  update_poetries.sh
testdata/: config.yaml
(+140 files in other folders)
