[tool.poetry]
name = "exit-py"
version = "1.0.0"
description = "KAI SDK's demo in Python"
authors = ["Intelygenz - KAI Team"]
maintainers = ["Intelygenz - KAI Team"]

[tool.poetry.dependencies]
python = "~3.11"
nats-py = "2.6.0"
protobuf = "4.23.4"
loguru = "0.7.0"
vyper-config = "1.1.1"
kai-runner = "2.0.1"

[tool.poetry.group.dev.dependencies]
ipdb = "0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
