[tool.poetry]
name = "training-py"
version = "0.1.0"
description = ""
authors = ["Intelygenz - AIO Team"]
maintainers = ["Intelygenz - AIO Team"]

[tool.poetry.dependencies]
python = "3.11.5"
nats-py = "2.3.0"
protobuf = "4.23.4"
loguru = "0.7.0"
vyper-config = "1.1.1"
sdk = {git = "https://github.com/konstellation-io/kai-sdk.git", subdirectory = "py-sdk/sdk"}
runner = {git = "https://github.com/konstellation-io/kai-sdk.git", subdirectory = "py-sdk/runner"}

[tool.poetry.group.dev.dependencies]
ipdb = "0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
